src/libqwidget.bf

public struct QWidget
{
	[LinkName("QWidget_new")]
	public static extern void* QWidget_new(QWidget parent);
	[LinkName("QWidget_new2")]
	public static extern void* QWidget_new2();
	[LinkName("QWidget_new3")]
	public static extern void* QWidget_new3(QWidget parent, int64 f);
	[LinkName("QWidget_MetaObject")]
	public static extern QMetaObject QWidget_MetaObject(void* c_this);
	[LinkName("QWidget_Metacast")]
	public static extern void QWidget_Metacast(void* c_this, char8[] param1);
	[LinkName("QWidget_Metacall")]
	public static extern int32 QWidget_Metacall(void* c_this, int64 param1, int32 param2, void param3);
	[LinkName("QWidget_Tr")]
	public static extern char8[] QWidget_Tr(char8[] s);
	[LinkName("QWidget_DevType")]
	public static extern int32 QWidget_DevType(void* c_this);
	[LinkName("QWidget_WinId")]
	public static extern c_uintptr QWidget_WinId(void* c_this);
	[LinkName("QWidget_CreateWinId")]
	public static extern void QWidget_CreateWinId(void* c_this);
	[LinkName("QWidget_InternalWinId")]
	public static extern c_uintptr QWidget_InternalWinId(void* c_this);
	[LinkName("QWidget_EffectiveWinId")]
	public static extern c_uintptr QWidget_EffectiveWinId(void* c_this);
	[LinkName("QWidget_Style")]
	public static extern QStyle QWidget_Style(void* c_this);
	[LinkName("QWidget_SetStyle")]
	public static extern void QWidget_SetStyle(void* c_this, QStyle style);
	[LinkName("QWidget_IsTopLevel")]
	public static extern bool QWidget_IsTopLevel(void* c_this);
	[LinkName("QWidget_IsWindow")]
	public static extern bool QWidget_IsWindow(void* c_this);
	[LinkName("QWidget_IsModal")]
	public static extern bool QWidget_IsModal(void* c_this);
	[LinkName("QWidget_WindowModality")]
	public static extern int64 QWidget_WindowModality(void* c_this);
	[LinkName("QWidget_SetWindowModality")]
	public static extern void QWidget_SetWindowModality(void* c_this, int64 windowModality);
	[LinkName("QWidget_IsEnabled")]
	public static extern bool QWidget_IsEnabled(void* c_this);
	[LinkName("QWidget_IsEnabledTo")]
	public static extern bool QWidget_IsEnabledTo(void* c_this, QWidget param1);
	[LinkName("QWidget_SetEnabled")]
	public static extern void QWidget_SetEnabled(void* c_this, bool enabled);
	[LinkName("QWidget_SetDisabled")]
	public static extern void QWidget_SetDisabled(void* c_this, bool disabled);
	[LinkName("QWidget_SetWindowModified")]
	public static extern void QWidget_SetWindowModified(void* c_this, bool windowModified);
	[LinkName("QWidget_FrameGeometry")]
	public static extern QRect QWidget_FrameGeometry(void* c_this);
	[LinkName("QWidget_Geometry")]
	public static extern QRect QWidget_Geometry(void* c_this);
	[LinkName("QWidget_NormalGeometry")]
	public static extern QRect QWidget_NormalGeometry(void* c_this);
	[LinkName("QWidget_X")]
	public static extern int32 QWidget_X(void* c_this);
	[LinkName("QWidget_Y")]
	public static extern int32 QWidget_Y(void* c_this);
	[LinkName("QWidget_Pos")]
	public static extern QPoint QWidget_Pos(void* c_this);
	[LinkName("QWidget_FrameSize")]
	public static extern QSize QWidget_FrameSize(void* c_this);
	[LinkName("QWidget_Size")]
	public static extern QSize QWidget_Size(void* c_this);
	[LinkName("QWidget_Width")]
	public static extern int32 QWidget_Width(void* c_this);
	[LinkName("QWidget_Height")]
	public static extern int32 QWidget_Height(void* c_this);
	[LinkName("QWidget_Rect")]
	public static extern QRect QWidget_Rect(void* c_this);
	[LinkName("QWidget_ChildrenRect")]
	public static extern QRect QWidget_ChildrenRect(void* c_this);
	[LinkName("QWidget_ChildrenRegion")]
	public static extern QRegion QWidget_ChildrenRegion(void* c_this);
	[LinkName("QWidget_MinimumSize")]
	public static extern QSize QWidget_MinimumSize(void* c_this);
	[LinkName("QWidget_MaximumSize")]
	public static extern QSize QWidget_MaximumSize(void* c_this);
	[LinkName("QWidget_MinimumWidth")]
	public static extern int32 QWidget_MinimumWidth(void* c_this);
	[LinkName("QWidget_MinimumHeight")]
	public static extern int32 QWidget_MinimumHeight(void* c_this);
	[LinkName("QWidget_MaximumWidth")]
	public static extern int32 QWidget_MaximumWidth(void* c_this);
	[LinkName("QWidget_MaximumHeight")]
	public static extern int32 QWidget_MaximumHeight(void* c_this);
	[LinkName("QWidget_SetMinimumSize")]
	public static extern void QWidget_SetMinimumSize(void* c_this, QSize minimumSize);
	[LinkName("QWidget_SetMinimumSize2")]
	public static extern void QWidget_SetMinimumSize2(void* c_this, int32 minw, int32 minh);
	[LinkName("QWidget_SetMaximumSize")]
	public static extern void QWidget_SetMaximumSize(void* c_this, QSize maximumSize);
	[LinkName("QWidget_SetMaximumSize2")]
	public static extern void QWidget_SetMaximumSize2(void* c_this, int32 maxw, int32 maxh);
	[LinkName("QWidget_SetMinimumWidth")]
	public static extern void QWidget_SetMinimumWidth(void* c_this, int32 minw);
	[LinkName("QWidget_SetMinimumHeight")]
	public static extern void QWidget_SetMinimumHeight(void* c_this, int32 minh);
	[LinkName("QWidget_SetMaximumWidth")]
	public static extern void QWidget_SetMaximumWidth(void* c_this, int32 maxw);
	[LinkName("QWidget_SetMaximumHeight")]
	public static extern void QWidget_SetMaximumHeight(void* c_this, int32 maxh);
	[LinkName("QWidget_SizeIncrement")]
	public static extern QSize QWidget_SizeIncrement(void* c_this);
	[LinkName("QWidget_SetSizeIncrement")]
	public static extern void QWidget_SetSizeIncrement(void* c_this, QSize sizeIncrement);
	[LinkName("QWidget_SetSizeIncrement2")]
	public static extern void QWidget_SetSizeIncrement2(void* c_this, int32 w, int32 h);
	[LinkName("QWidget_BaseSize")]
	public static extern QSize QWidget_BaseSize(void* c_this);
	[LinkName("QWidget_SetBaseSize")]
	public static extern void QWidget_SetBaseSize(void* c_this, QSize baseSize);
	[LinkName("QWidget_SetBaseSize2")]
	public static extern void QWidget_SetBaseSize2(void* c_this, int32 basew, int32 baseh);
	[LinkName("QWidget_SetFixedSize")]
	public static extern void QWidget_SetFixedSize(void* c_this, QSize fixedSize);
	[LinkName("QWidget_SetFixedSize2")]
	public static extern void QWidget_SetFixedSize2(void* c_this, int32 w, int32 h);
	[LinkName("QWidget_SetFixedWidth")]
	public static extern void QWidget_SetFixedWidth(void* c_this, int32 w);
	[LinkName("QWidget_SetFixedHeight")]
	public static extern void QWidget_SetFixedHeight(void* c_this, int32 h);
	[LinkName("QWidget_MapToGlobal")]
	public static extern QPointF QWidget_MapToGlobal(void* c_this, QPointF param1);
	[LinkName("QWidget_MapToGlobalWithQPoint")]
	public static extern QPoint QWidget_MapToGlobalWithQPoint(void* c_this, QPoint param1);
	[LinkName("QWidget_MapFromGlobal")]
	public static extern QPointF QWidget_MapFromGlobal(void* c_this, QPointF param1);
	[LinkName("QWidget_MapFromGlobalWithQPoint")]
	public static extern QPoint QWidget_MapFromGlobalWithQPoint(void* c_this, QPoint param1);
	[LinkName("QWidget_MapToParent")]
	public static extern QPointF QWidget_MapToParent(void* c_this, QPointF param1);
	[LinkName("QWidget_MapToParentWithQPoint")]
	public static extern QPoint QWidget_MapToParentWithQPoint(void* c_this, QPoint param1);
	[LinkName("QWidget_MapFromParent")]
	public static extern QPointF QWidget_MapFromParent(void* c_this, QPointF param1);
	[LinkName("QWidget_MapFromParentWithQPoint")]
	public static extern QPoint QWidget_MapFromParentWithQPoint(void* c_this, QPoint param1);
	[LinkName("QWidget_MapTo")]
	public static extern QPointF QWidget_MapTo(void* c_this, QWidget param1, QPointF param2);
	[LinkName("QWidget_MapTo2")]
	public static extern QPoint QWidget_MapTo2(void* c_this, QWidget param1, QPoint param2);
	[LinkName("QWidget_MapFrom")]
	public static extern QPointF QWidget_MapFrom(void* c_this, QWidget param1, QPointF param2);
	[LinkName("QWidget_MapFrom2")]
	public static extern QPoint QWidget_MapFrom2(void* c_this, QWidget param1, QPoint param2);
	[LinkName("QWidget_Window")]
	public static extern QWidget QWidget_Window(void* c_this);
	[LinkName("QWidget_NativeParentWidget")]
	public static extern QWidget QWidget_NativeParentWidget(void* c_this);
	[LinkName("QWidget_TopLevelWidget")]
	public static extern QWidget QWidget_TopLevelWidget(void* c_this);
	[LinkName("QWidget_Palette")]
	public static extern QPalette QWidget_Palette(void* c_this);
	[LinkName("QWidget_SetPalette")]
	public static extern void QWidget_SetPalette(void* c_this, QPalette palette);
	[LinkName("QWidget_SetBackgroundRole")]
	public static extern void QWidget_SetBackgroundRole(void* c_this, int64 backgroundRole);
	[LinkName("QWidget_BackgroundRole")]
	public static extern int64 QWidget_BackgroundRole(void* c_this);
	[LinkName("QWidget_SetForegroundRole")]
	public static extern void QWidget_SetForegroundRole(void* c_this, int64 foregroundRole);
	[LinkName("QWidget_ForegroundRole")]
	public static extern int64 QWidget_ForegroundRole(void* c_this);
	[LinkName("QWidget_Font")]
	public static extern QFont QWidget_Font(void* c_this);
	[LinkName("QWidget_SetFont")]
	public static extern void QWidget_SetFont(void* c_this, QFont font);
	[LinkName("QWidget_FontMetrics")]
	public static extern QFontMetrics QWidget_FontMetrics(void* c_this);
	[LinkName("QWidget_FontInfo")]
	public static extern QFontInfo QWidget_FontInfo(void* c_this);
	[LinkName("QWidget_Cursor")]
	public static extern QCursor QWidget_Cursor(void* c_this);
	[LinkName("QWidget_SetCursor")]
	public static extern void QWidget_SetCursor(void* c_this, QCursor cursor);
	[LinkName("QWidget_UnsetCursor")]
	public static extern void QWidget_UnsetCursor(void* c_this);
	[LinkName("QWidget_SetMouseTracking")]
	public static extern void QWidget_SetMouseTracking(void* c_this, bool enable);
	[LinkName("QWidget_HasMouseTracking")]
	public static extern bool QWidget_HasMouseTracking(void* c_this);
	[LinkName("QWidget_UnderMouse")]
	public static extern bool QWidget_UnderMouse(void* c_this);
	[LinkName("QWidget_SetTabletTracking")]
	public static extern void QWidget_SetTabletTracking(void* c_this, bool enable);
	[LinkName("QWidget_HasTabletTracking")]
	public static extern bool QWidget_HasTabletTracking(void* c_this);
	[LinkName("QWidget_SetMask")]
	public static extern void QWidget_SetMask(void* c_this, QBitmap mask);
	[LinkName("QWidget_SetMaskWithMask")]
	public static extern void QWidget_SetMaskWithMask(void* c_this, QRegion mask);
	[LinkName("QWidget_Mask")]
	public static extern QRegion QWidget_Mask(void* c_this);
	[LinkName("QWidget_ClearMask")]
	public static extern void QWidget_ClearMask(void* c_this);
	[LinkName("QWidget_Render")]
	public static extern void QWidget_Render(void* c_this, QPaintDevice target);
	[LinkName("QWidget_RenderWithPainter")]
	public static extern void QWidget_RenderWithPainter(void* c_this, QPainter painter);
	[LinkName("QWidget_Grab")]
	public static extern QPixmap QWidget_Grab(void* c_this);
	[LinkName("QWidget_GraphicsEffect")]
	public static extern QGraphicsEffect QWidget_GraphicsEffect(void* c_this);
	[LinkName("QWidget_SetGraphicsEffect")]
	public static extern void QWidget_SetGraphicsEffect(void* c_this, QGraphicsEffect effect);
	[LinkName("QWidget_GrabGesture")]
	public static extern void QWidget_GrabGesture(void* c_this, int64 typeVal);
	[LinkName("QWidget_UngrabGesture")]
	public static extern void QWidget_UngrabGesture(void* c_this, int64 typeVal);
	[LinkName("QWidget_SetWindowTitle")]
	public static extern void QWidget_SetWindowTitle(void* c_this, char8[] windowTitle);
	[LinkName("QWidget_SetStyleSheet")]
	public static extern void QWidget_SetStyleSheet(void* c_this, char8[] styleSheet);
	[LinkName("QWidget_StyleSheet")]
	public static extern char8[] QWidget_StyleSheet(void* c_this);
	[LinkName("QWidget_WindowTitle")]
	public static extern char8[] QWidget_WindowTitle(void* c_this);
	[LinkName("QWidget_SetWindowIcon")]
	public static extern void QWidget_SetWindowIcon(void* c_this, QIcon icon);
	[LinkName("QWidget_WindowIcon")]
	public static extern QIcon QWidget_WindowIcon(void* c_this);
